- add:     Content trailers now checked for 3D tags
- add:     Trailer source 'Directory' now uses 3D tags to filter files when 'Filter 3D based on feature' is enabled
- fix:     Unified some strings between addon level and module level settings
- change:  Trailers ratings now compared to features remaining in the queue instead of initial queue

[- 0.0.44 -]

- fix:     Error for video bumpers with source as directory, random set and count set greater than number of files
- add:     When sending a log to PasteBin, you are now asked if you would like to send the current or old log
- change:  Now ignores trivia slides in root of Trivia Slides folder when scanning for content
- change:  Removed trailer source options: Apple iTunes and Kodi Database - replaced with: Scrapers
- change:  Removed Trailers setting 'Fallback to KodiDB (iTunes only)'
- add:     Added Trailers sub-setting 'Scrapers' for setting scrapers to use when source is 'Scrapers'
- change:  Move Video Bumpers above Trailers in the sequence editor and rename to Videos

[- 0.0.43 -]

- fix:     Broken transitions
- fix:     Error when playlist dialog was disabled

[- 0.0.42 -]

- add:     Added setting in 'Trailers' - 'Fallback to Kodi DB (iTunes only)'
- fix:     Addon setting for limiting trailers by genre was not being used as a default
- fix:     Trailers were always being marked as broken when selected for
- add:     Addon setting in 'Advanced' - 'Clear trailers broken status' :)

[- 0.0.41 -]

- change:  iTunes trailers now gets all trailers and gives priority to most recent and unwatched, falling back to watched if necessary
- change:  Save/Load now saves and loads to the 'Sequences' folder in the Cinemavision content path
- add:     Import/Export loads and saves sequences to locations outside the content 'Sequence' folder
- add:     The ability to change which sequence to use from the playlist dialog
- change:  Default 2D/3D sequence is now set by name